--- a/tpAPI/index.html
+++ b/tpAPI/index.html
@@ -6,7 +6,7 @@
     <title>Twitch Online favs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <script src="main.js"></script>
+    
 </head>
 <body>
     <main class="background">
@@ -21,11 +21,11 @@
         </section>
 
         <section id="favUs">
-daasdadasda
+            <h1 id="prueba1"></h1>
         </section>
 
     </main>
 
-    
+    <script src="js/main.js"></script>
 </body>
 </html>
