--- a/tpAPI/index.html
+++ b/tpAPI/index.html
@@ -25,7 +25,7 @@
         </section>
 
     </main>
-    <script src="js/jquery.js"></script>
-    <script src="js/main.js"></script>
+    <script type="application/javascript" src="js/jquery.js"></script>
+    <script type="application/javascript" src="js/main.js"></script>
 </body>
 </html>
