--- a/tpAPI/index.html
+++ b/tpAPI/index.html
@@ -12,7 +12,7 @@
     <main class="background">
         <header class="header">
             <div >
-                <img src="../res/logoTwitch.png" class="logo">
+                <img src="res/logoTwitch.png" class="logo">
             </div>
         </header>
 
