agrege 2 GET mas

--- a/tpAPI/index.html
+++ b/tpAPI/index.html
@@ -17,8 +17,10 @@
         </header>
         
         <section class="encabezado">
-            <h2>Pink_Whale</h2>
-            <h3 id="userStatus"></h1>
+            <h2 id="userName"></h2>
+            <h3 id="userStatus"></h3>
+            </br>
+            <p>Fecha de creacion: <h6 id="createDate"></h6></p>
         </section>
         
         <section class="globo">
