--- a/public/index.html
+++ b/public/index.html
@@ -27,14 +27,14 @@
                     <h2 id="userName"></h2>
                     <h3 id="userStatus"></h3>
                     </br>
-                    <p>Fecha de creacion: <h6 id="createDate"></h6></p>
+                    <p>Fecha de creación: <h6 id="createDate"></h6></p>
             </div>
 
 
         </section>
 
         <section class="globo">
-            <h2>Favorite users</h2>
+            <h2>Canales que sigue </h2>
         </section>
 
         <section id="favUs"></section>
